--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World!!!</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <body>
+    <h1>Hello World!!!</h1>
+      <title>View My 3D Works</title>
+      <link rel = "stylesheet" href = "benwarnerdigitalarts.github.io/3Dworks/">
+    <p>I'm hosted with GitHub Pages.</p>
+  </body>
 </html>
