--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <h1>Hello World!!!</h1>
       <title>View My 3D Works</title>
       <link rel = "stylesheet" href = "benwarnerdigitalarts.github.io/3Dworks/">
-    <p>I'm hosted with GitHub Pages.</p>
+    <p>This page is brought to you by: GitHub Pages.</p>
   </body>
 </html>
