--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <title>Ben B. Warner</title>
+  <div style="background-image: url('assets/starfield-field.jpg');"> 
   <body>
     <h1>Hello World!!!</h1>
-      <title>View My 3D Works</title>
-      <link rel = "stylesheet" href = "benwarnerdigitalarts.github.io/3Dworks/">
+    <a href = "benwarnerdigitalarts.github.io/3Dworks/"> View my 3D Works!</a>
     <p>This page is brought to you by: GitHub Pages.</p>
   </body>
 </html>
