--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <title>Ben B. Warner</title>
   <div style="background-image: url('assets/starfield-field.jpg');"> 
   <body>
-    <h1>Hello World!!!</h1>
-    <a href = "benwarnerdigitalarts.github.io/3Dworks/"> View my 3D Works!</a>
+    <h1 style="color:white;">Hello World!!!</h1>
+    <a href = "/3Dworks/"> View my 3D Works!</a>
     <p>This page is brought to you by: GitHub Pages.</p>
   </body>
 </html>
