--- a/index.html
+++ b/index.html
@@ -1,10 +1,109 @@
 <!DOCTYPE html>
-<html>
-  <title>Ben B. Warner</title>
-  <div style="background-image: url('assets/starfield-field.jpg');"> 
-  <body>
-    <h1 style="color:white;">Hello World!!!</h1>
-    <a href = "/3Dworks/"> View my 3D Works!</a>
-    <p>This page is brought to you by: GitHub Pages.</p>
-  </body>
+<html lang="en">
+<head>
+<title>Ben B. Warner</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color: #000;
+  padding: 15px;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 30%;
+  height: 300px; /* only for demonstration, should be removed */
+  background: #666;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+mainArea {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: 'assets/starfield-field.jpg';
+  height: 300px; /* only for demonstration, should be removed */'
+  color: white;
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #000;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
+</head>
+<body>
+<header>
+  <h2>Ben B. Warner</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="/3DWorks">3D Works</a></li>
+      <li><a href="#">2D Works</a></li>
+      <li><a href="#">Other</a></li>
+    </ul>
+  </nav>
+  
+  <mainArea>
+    <h1>About Me</h1>
+    <p>I am a Mechanical Engineer with a Bachelors Degree from Clemson University trying to improve the world by focusing on sustainable practices in my personal and professional life. I enjoy the prospect of working with new technologies, such as VR and 3D printing, and getting a chance to improve them further. I am proficient in multiple computer programming languages such as C++ and Python. I also am very well versed in design software such as SolidWorks and similar CAD.</p>
+    <p>In addition to my pursuits in the engineering field, I have begun honing my 3D design and programming skills through a Masters of Science in Digital Production Arts. In this program, I am able to optimize the use of my free time to develop my personal and professional interests in Digital Productions.</p>
+    <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
+    
+    <li><a href="/3DWorks">3D Works</a></li>
+    <li><a href="#">2D Works</a></li>
+    <li><a href="#">Other</a></li>
+    
+  </mainArea>
+</section>
+
+<footer>
+  <p>    
+    <li><a href="https://www.linkedin.com/in/benjamin-b-warner/">LinkedIn</a></li>
+    <li><a href="#">Art Station</a></li>
+    <li><a href="#">Other</a></li>
+  </p>
+</footer>
+
+</body>
 </html>
