--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ mainArea {
   float: left;
   padding: 20px;
   width: 80%;
-  background-color: 'assets/starfield-field.jpg';
+  background-color: "assets/starfield-field.jpg";
   height: 300px; /* only for demonstration, should be removed */
   color: white;
 }
