--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="/3DWorks">3D Works</a></li>
+      <li><a href="/3Dworks/">3D Works</a></li>
       <li><a href="#">2D Works</a></li>
       <li><a href="#">Other</a></li>
     </ul>
