--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Ben B. Warner</title>
+<title>Digital Arts</title>
+<title2>by Ben B. Warner</title2>  
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -24,9 +25,9 @@ header {
 
 /* Create three columns/boxes that floats next to each other */
 nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-flex: 0.5;
+  -ms-flex: 0.5;
+  flex: 0.5;
   background: #999;
   padding: 20px;
 }
@@ -38,18 +39,18 @@ nav ul {
 }
 
 mainArea {
-  -webkit-flex: 2;
-  -ms-flex: 2;
-  flex: 2;
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
   padding: 10px;
-  background-image: "assets/starfield-field.jpg";
+  background: #000;
   color: white;
 }
   
 nav2 {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-flex: 0.5;
+  -ms-flex: 0.5;
+  flex: 0.5;
   background: #999;
   padding: 20px;
 }
