--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Digital Arts</title>
-<title2>by Ben B. Warner</title2>  
+<title>Ben B. Warner</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -81,7 +80,8 @@ footer {
 </head>
 <body>
 <header>
-  <h2>Ben B. Warner</h2>
+  <h2>Digital Arts</h2>
+  <h3>by Ben B. Warner</h3>  
 </header>
 
 <section>
