--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 /* Style the header */
@@ -21,7 +21,11 @@ header {
   font-size: 20px;
   color: white;
 }
-
+/* Container for flexboxes */
+section {
+  display: -webkit-flex;
+  display: flex;
+}
 /* Create three columns/boxes that floats next to each other */
 nav {
   -webkit-flex: 0.5;
@@ -81,7 +85,7 @@ footer {
 <body>
 <header>
   <h2>Digital Arts</h2>
-  <h3>by Ben B. Warner</h3>  
+  <h5>by Ben B. Warner</h5>  
 </header>
 
 <section>
