--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Ben B. Warner</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<div stle="background-image: url('assets/starfield-field.jpg');">
 <style>
 * {
   box-sizing: border-box;
