--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ footer {
 </section>
 
 <footer>
-  <p> 
+  <p>Contact: <a href="benbwarnr@gmail.com">Email</a> </p>
+  <p>
     <a href="https://www.linkedin.com/in/benjamin-b-warner/">LinkedIn</a> <a href="#">Art Station</a> <a href="#">Other</a>
   </p>
 </footer>
