--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ footer {
 </section>
 
 <footer>
-  <em>Contact Email: benbwarnr@gmail.com</em>
+  <em>Contact Email: benbwarner@gmail.com</em>
   <p>
     <a href="https://www.linkedin.com/in/benjamin-b-warner/">LinkedIn</a> <a href="#">Art Station</a> <a href="#">Other</a>
   </p>
