--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <title>Ben B. Warner</title>
+<meta name="description" content="A digital art nexus for displaying the works of Ben B. Warner">
+<meta name="description" keywords="digital art, graphics, prototyping, engineer">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body style="background-image: url('assets/starfield-field.jpg');">
@@ -88,7 +90,7 @@ footer {
   <h2>Digital Arts</h2>
   <h5>by Ben B. Warner</h5>  
 </header>
-
+<hr>
 <section>
   <nav>
     <ul>
@@ -106,7 +108,7 @@ footer {
   </mainArea>
   <nav2></nav2>
 </section>
-
+<hr>
 <footer>
   <em>Contact Email: benbwarner@gmail.com</em>
   <p>
