--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@ footer {
   <nav2></nav2>
 </section>
 <hr>
+  <mainArea>
+    <h1>3D Works</h1>
+    <p>Nothing here yet!</p>
+  </mainArea>
+  <nav2></nav2>
+</section>
+<hr>
+  
+  
 <footer>
   <em>Contact Email: benbwarner@gmail.com</em>
   <p>
