--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@ footer {
       <p>In addition to my pursuits in the engineering field, I have begun honing my 3D design and programming skills through a Masters of Science in Digital Production Arts. In this program, I am able to optimize the use of my free time to develop my personal and professional interests in Digital Productions.</p>
       <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
     </mainArea>
-    <hr>
+  </section>
+  <hr>
+  <section>
     <mainArea>
       <h1>3D Works</h1>
       <p>Nothing here yet!</p>
@@ -117,7 +119,6 @@ footer {
   <nav2></nav2>
 </section>
 <hr>
-  
   
 <footer>
   <em>Contact Email: benbwarner@gmail.com</em>
