--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 body { font-family: "Times New Roman", Times, serif; }
 /* Style the header */
 header {
-  height: 10%;
   background-color: #666;
   padding: 5px;
   text-align: center;
@@ -33,7 +32,7 @@ mainArea {
 }
 /* Fixed sidebar */
 .sidenav {
-  height: 90%;
+  height: 100%;
   width: 160px;
   position: fixed;
   z-index: 1;
@@ -90,12 +89,6 @@ footer {
 <body>
   
 <div class="parallax"></div>
-  
-<header>
-  <h2>Digital Arts</h2>
-  <h5>by Ben B. Warner</h5>  
-</header>
-<hr>
 <div class="sidenav">
   <a href="#about">About</a>
   <a href="#3Dworks">3D Works</a>
@@ -104,54 +97,69 @@ footer {
   <a href="#contact">Contact</a>
 </div>
 <div class="main">
-  <div id="about">
-    <hr>
-    <mainArea>
-      <h1>About Me</h1>
-      <p>I am a Mechanical Engineer with a Bachelors Degree from Clemson University trying to improve the world by focusing on sustainable practices in my personal and professional life. I enjoy the prospect of working with new technologies, such as VR and 3D printing, and getting a chance to improve them further. I am proficient in multiple computer programming languages such as C++ and Python. I also am very well versed in design software such as SolidWorks and similar CAD.</p>
-      <p>In addition to my pursuits in the engineering field, I have begun honing my 3D design and programming skills through a Masters of Science in Digital Production Arts. In this program, I am able to optimize the use of my free time to develop my personal and professional interests in Digital Productions.</p>
-      <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
-    </mainArea>
-    <hr>
-  </div>
+  <header>
+    <h2>Digital Arts</h2>
+    <h5>by Ben B. Warner</h5>  
+  </header>
   <hr>
-  <div id="3Dworks">
-    <hr>
-    <mainArea>
-      <h1>3D Works</h1>
-      <p>Nothing here yet!</p>
-    </mainArea>
-    <hr>
-  </div>
+  <section>
+    <div id="about">
+      <hr>
+      <mainArea>
+        <h1>About Me</h1>
+        <p>I am a Mechanical Engineer with a Bachelors Degree from Clemson University trying to improve the world by focusing on sustainable practices in my personal and professional life. I enjoy the prospect of working with new technologies, such as VR and 3D printing, and getting a chance to improve them further. I am proficient in multiple computer programming languages such as C++ and Python. I also am very well versed in design software such as SolidWorks and similar CAD.</p>
+        <p>In addition to my pursuits in the engineering field, I have begun honing my 3D design and programming skills through a Masters of Science in Digital Production Arts. In this program, I am able to optimize the use of my free time to develop my personal and professional interests in Digital Productions.</p>
+        <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
+      </mainArea>
+      <hr>
+    </div>
+  </section>
   <hr>
-  <div id="2Dworks">
-    <hr>
-    <mainArea>
-      <h1>2D Works</h1>
-      <p>Nothing here yet!</p>
-    </mainArea>
-    <hr>
-  </div>
+  <section>
+    <div id="3Dworks">
+      <hr>
+      <mainArea>
+        <h1>3D Works</h1>
+        <p>Nothing here yet!</p>
+      </mainArea>
+      <hr>
+    </div>
+  </section>
   <hr>
-  <div id="other">
-    <hr>
-    <mainArea>
-      <h1>Other Works</h1>
-      <p>Nothing here yet!</p>
-    </mainArea>
-    <hr>
-  </div>
+  <section>
+    <div id="2Dworks">
+      <hr>
+      <mainArea>
+        <h1>2D Works</h1>
+        <p>Nothing here yet!</p>
+      </mainArea>
+      <hr>
+    </div>
+  </section>
   <hr>
-  <div id="contact">
-    <hr>
-    <mainArea>
-      <em>Contact Email: benbwarner@gmail.com</em>
-      <p>
-        <a href="https://www.linkedin.com/in/benjamin-b-warner/">LinkedIn</a> <a href="#">Art Station</a> <a href="#">Other</a>
-      </p>
-    </mainArea>
-    <hr>
-  </div>
+  <section>
+    <div id="other">
+      <hr>
+      <mainArea>
+        <h1>Other Works</h1>
+        <p>Nothing here yet!</p>
+      </mainArea>
+      <hr>
+    </div>
+  </section>
+  <hr>
+  <section>
+    <div id="contact">
+      <hr>
+      <mainArea>
+        <em>Contact Email: benbwarner@gmail.com</em>
+        <p>
+          <a href="https://www.linkedin.com/in/benjamin-b-warner/">LinkedIn</a> <a href="#">Art Station</a> <a href="#">Other</a>
+        </p>
+      </mainArea>
+      <hr>
+    </div>
+  </section>
   <hr>
 </div>
 <hr>
