--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ body {
   height: 10%;
   width: 100%;
   position: fixed;
-  top: 0; left: 0;
   background-color: #666;
   padding: 6px 8px 6px 16px;
   text-align: center;
@@ -43,7 +42,7 @@ section {
   width: 160px;
   position: fixed;
   z-index: 1;
-  bottm: 0; left: 0;
+  left: 0;
   background-color: #111;
   overflow-x: hidden;
   padding-top: 20px;
