--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 }
 /* Style the header */
 .header {
-  height: 10%;
+  height: 20%;
   width: 100%;
   position: fixed;
   background-color: #666;
@@ -38,11 +38,11 @@ section {
 }
 /* Fixed sidebar */
 .sidenav {
-  height: 90%;
+  height: 80%;
   width: 160px;
   position: fixed;
   z-index: 1;
-  left: 0;
+  bottom 0; left: 0;
   background-color: #111;
   overflow-x: hidden;
   padding-top: 20px;
@@ -100,8 +100,8 @@ section::after {
 </div>
 <div class="main">
   <hr>
-  <section>
-    <div class="mainArea",id="about">
+  <div id="about">
+    <div class="mainArea">
       <hr>
       <h1>About Me</h1>
       <p>I am a Mechanical Engineer with a Bachelors Degree from Clemson University trying to improve the world by focusing on sustainable practices in my personal and professional life. I enjoy the prospect of working with new technologies, such as VR and 3D printing, and getting a chance to improve them further. I am proficient in multiple computer programming languages such as C++ and Python. I also am very well versed in design software such as SolidWorks and similar CAD.</p>
@@ -109,7 +109,7 @@ section::after {
       <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
       <hr>
     </div>
-  </section>
+  </div>
   <hr>
   <section>
     <div class="mainArea",id="3Dworks">
