--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 }
 /* Style the header */
 .header {
-  height: 20%;
+  height: 15%;
   width: 100%;
   position: fixed;
   background-color: #666;
@@ -38,11 +38,12 @@ section {
 }
 /* Fixed sidebar */
 .sidenav {
-  height: 80%;
+  height: 85%;
   width: 160px;
   position: fixed;
   z-index: 1;
-  bottom 0; left: 0;
+  bottom 0;
+  left: 0;
   background-color: #111;
   overflow-x: hidden;
   padding-top: 20px;
@@ -112,7 +113,7 @@ section::after {
   </div>
   <hr>
   <section>
-    <div class="mainArea",id="3Dworks">
+    <div class="mainArea", id="3Dworks">
       <hr>
       <h1>3D Works</h1>
       <p>Nothing here yet!</p>
@@ -121,7 +122,7 @@ section::after {
   </section>
   <hr>
   <section>
-    <div class="mainArea",id="2Dworks">
+    <div class="mainArea", id="2Dworks">
       <hr>
       <h1>2D Works</h1>
       <p>Nothing here yet!</p>
@@ -130,7 +131,7 @@ section::after {
   </section>
   <hr>
   <section>
-    <div class="mainArea",id="other">
+    <div class="mainArea", id="other">
       <hr>
       <h1>Other Works</h1>
       <p>Nothing here yet!</p>
@@ -139,7 +140,7 @@ section::after {
   </section>
   <hr>
   <section>
-    <div class="mainArea",id="contact">
+    <div class="mainArea", id="contact">
       <hr>
       <em>Contact Email: benbwarner@gmail.com</em>
       <p>
