--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Ben B. Warner</title>
+<title>BW DigiNexus</title>
 <meta name="description" content="A digital art nexus for displaying the works of Ben B. Warner">
 <meta name="description" keywords="digital art, graphics, prototyping, engineer">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* { box-sizing: border-box; }
+
 body { 
   font-family: "Times New Roman", Times, serif;
   background-image: url('assets/starfield-field.jpg');
