--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" keywords="digital art, graphics, prototyping, engineer">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<style>
 body { 
   font-family: "Times New Roman", Times, serif;
   background-image: url('assets/starfield-field.jpg');
