--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
   width: 160px;
   position: fixed;
   z-index: 1;
-  bottom 0; left: 0;
+  top 10%; left: 0;
   background-color: #111;
   overflow-x: hidden;
 }
