--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@ body {
   top: 0; left: 0;
   background-color: #666;
   text-align: center;
-  font-size: 25px;
+  font-size: 2vw;
   color: white;
 }
 /* Fixed sidebar */
 .sidenav {
   height: 90%;
-  width: 160px;
+  width: 20%;
   position: fixed;
   z-index: 1;
-  top 10%; left: 0;
+  top 30%; left: 0;
   background-color: #111;
   overflow-x: hidden;
 }
 .sidenav a {
-  padding: 6px 8px 6px 16px;
+  padding: 1vw 2vw 1vw 3vw;
   font-size: 25px;
   color: #818181;
   display: block;
@@ -58,15 +58,15 @@ section::after {
   background-size: cover;
 }
 .main {
-  margin-left: 160px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 20px 10px;
+  margin-left: 20%; /* Same as the width of the sidenav */
+  font-size: 2vw; /* Increased text to enable scrolling */
+  padding: 5vw 3vw;
   background-color: #000;
   color: white;
 }
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {padding-top: 0;}
+  .sidenav a {font-size: 4vw;}
 }
 </style>
 </head>
