--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ section::after {
   margin-left: 20%; /* Same as the width of the sidenav */
   font-size: 2vw; /* Increased text to enable scrolling */
   padding: 5vw 3vw;
-  background-color: #000;
+  background-color: #222;
   color: white;
 }
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 0;}
+  .sidenav {padding-top: 8vw;}
   .sidenav a {font-size: 4vw;}
 }
 </style>
