--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 }
 /* Style the header */
 .header {
-  height: 10%;
+  height: 7vw;
   width: 100%;
   position: fixed;
   top: 0; left: 0;
@@ -24,17 +24,17 @@ body {
 }
 /* Fixed sidebar */
 .sidenav {
-  height: 90%;
-  width: 20%;
+  height: 100%;
+  width: 15vw;
   position: fixed;
   z-index: 1;
-  top 30%; left: 0;
+  top 7vw; left: 0;
   background-color: #111;
   overflow-x: hidden;
 }
 .sidenav a {
   padding: 1vw 2vw 1vw 3vw;
-  font-size: 25px;
+  font-size: 2vw;
   color: #818181;
   display: block;
 }
@@ -53,16 +53,18 @@ body {
   background-size: cover;
 }
 .main {
-  margin-left: 20%; /* Same as the width of the sidenav */
+  margin-left: 15vw; /* Same as the width of the sidenav */
   font-size: 2vw; /* Increased text to enable scrolling */
   padding: 5vw 3vw;
   background-color: #333;
   color: white;
 }
+/*
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 0vw;}
   .sidenav a {font-size: 3vw;}
 }
+*/
 </style>
 </head>
 <body>
