--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@ body {
 /* Fixed sidebar */
 .sidenav {
   height: 100%;
-  width: 10vw;
+  width: 15vw;
   position: fixed;
-  z-index: 1;
-  top 15vw; left: 0;
+  top: 7vw;
+  left: 0;
   background-color: #111;
   overflow-x: hidden;
 }
 .sidenav a {
   padding: 1vw 2vw 1vw 3vw;
-  font-size: 2vw;
+  font-size: 1.5vw;
   color: #818181;
   display: block;
 }
@@ -53,24 +53,19 @@ body {
   background-size: cover;
 }
 .main {
-  margin-left: 12vw; /* Same as the width of the sidenav */
-  font-size: 1vw; /* Increased text to enable scrolling */
+  margin-left: 15vw; /* Same as the width of the sidenav */
+  font-size: 1.5vw; /* Increased text to enable scrolling */
   padding: 3vw 2vw;
   background-color: #333;
   color: white;
 }
-/*
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 0vw;}
-  .sidenav a {font-size: 3vw;}
-}
-*/
+
 </style>
 </head>
 <body>
   
 <div class="header">
-  <h2>Ben Warner's Digital Art Nexus</h2>
+  <p>Ben Warner's Digital Art Nexus</p>
 </div>
 <div class="sidenav">
   <a href="#about">About</a>
@@ -82,7 +77,7 @@ body {
 <hr>
 <div class="main", id="about">
   <hr>
-  <h1>About Me</h1>
+  <h2>About Me</h2>
   <p>I am a Mechanical Engineer with a Bachelors Degree from Clemson University trying to improve the world by focusing on sustainable practices in my personal and professional life. I enjoy the prospect of working with new technologies, such as VR and 3D printing, and getting a chance to improve them further. I am proficient in multiple computer programming languages such as C++ and Python. I also am very well versed in design software such as SolidWorks and similar CAD.</p>
   <p>In addition to my pursuits in the engineering field, I have begun honing my 3D design and programming skills through a Masters of Science in Digital Production Arts. In this program, I am able to optimize the use of my free time to develop my personal and professional interests in Digital Productions.</p>
   <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
@@ -91,21 +86,21 @@ body {
 <hr>
 <div class="main", id="3Dworks">
   <hr>
-  <h1>3D Works</h1>
+  <h2>3D Works</h2>
   <p>Nothing here yet!</p>
   <hr>
 </div>
 <hr>
 <div class="main", id="2Dworks">
   <hr>
-  <h1>2D Works</h1>
+  <h2>2D Works</h2>
   <p>Nothing here yet!</p>
   <hr>
 </div>
 <hr>
 <div class="main", id="other">
   <hr>
-  <h1>Other Works</h1>
+  <h2>Other Works</h2>
   <p>Nothing here yet!</p>
   <hr>
 </div>
