--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   background-image: url('assets/starfield-field.jpg');
 }
 /* Style the header */
-.header {
+header {
   height: 7vw;
   width: 100%;
   position: fixed;
@@ -23,7 +23,7 @@ body {
   color: white;
 }
 /* Fixed sidebar */
-.sidenav {
+sidenav {
   height: 100%;
   width: 12vw;
   position: fixed;
@@ -32,27 +32,15 @@ body {
   background-color: #111;
   overflow-x: hidden;
 }
-.sidenav a {
+sidenav a {
   padding: 1vw 2vw 1vw 3vw;
   font-size: 1.5vw;
   color: #818181;
   display: block;
 }
-.sidenav a:hover { color: #f1f1f1; }
+sidenav a:hover { color: #f1f1f1; }
 
-/* Add the parallax!! */
-.parallax {
-  /* The image used */
-  background-image: url('assets/starfield-field.jpg');
-  /* Full height */
-  height: 100%; 
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.main {
+main {
   margin-left: 15vw; /* Same as the width of the sidenav */
   font-size: 1.5vw; /* Increased text to enable scrolling */
   padding: 3vw 2vw;
@@ -64,55 +52,55 @@ body {
 </head>
 <body>
   
-<div class="header">
+<header>
   <p>Ben Warner's Digital Art Nexus</p>
-</div>
-<div class="sidenav">
+</header>
+<sidenav>
   <a href="#about">About</a>
   <a href="#3Dworks">3D Works</a>
   <a href="#2Dworks">2D Works</a>
   <a href="#other">Other</a>
   <a href="#contact">Contact</a>
-</div>
+</sidenav>
 <hr>
-<div class="main", id="about">
+<main id="about">
   <hr>
   <h2>About Me</h2>
   <p>I am a Mechanical Engineer with a Bachelors Degree from Clemson University trying to improve the world by focusing on sustainable practices in my personal and professional life. I enjoy the prospect of working with new technologies, such as VR and 3D printing, and getting a chance to improve them further. I am proficient in multiple computer programming languages such as C++ and Python. I also am very well versed in design software such as SolidWorks and similar CAD.</p>
   <p>In addition to my pursuits in the engineering field, I have begun honing my 3D design and programming skills through a Masters of Science in Digital Production Arts. In this program, I am able to optimize the use of my free time to develop my personal and professional interests in Digital Productions.</p>
   <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
   <hr>
-</div>
+</main>
 <hr>
-<div class="main", id="3Dworks">
+<main id="3Dworks">
   <hr>
   <h2>3D Works</h2>
-  <p>Nothing here yet!</p>
+  <a href="/3Dworks/">Link to old website!</a>
   <hr>
-</div>
+</main>
 <hr>
-<div class="main", id="2Dworks">
+<main id="2Dworks">
   <hr>
   <h2>2D Works</h2>
   <p>Nothing here yet!</p>
   <hr>
-</div>
+</main>
 <hr>
-<div class="main", id="other">
+<main id="other">
   <hr>
   <h2>Other Works</h2>
   <p>Nothing here yet!</p>
   <hr>
-</div>
+</main>
 <hr>
-<div class="main", id="contact">
+<main id="contact">
   <hr>
   <em>Contact Email: benbwarner@gmail.com</em>
   <p>
     <a href="https://www.linkedin.com/in/benjamin-b-warner/">LinkedIn</a> <a href="#">Art Station</a> <a href="#">Other</a>
   </p>
   <hr>
-</div>
+</main>
 <hr>
   
 </body>
