--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>BW DigiNexus</title>
+<title>BW Digital Art Nexus</title>
 <meta name="description" content="A digital art nexus for displaying the works of Ben B. Warner">
-<meta name="description" keywords="digital art, graphics, prototyping, engineer">
+<meta name="description" keywords="ben, warner, digital, art, graphics, prototype, engineer">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
