--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@ main {
   <hr>
   <em>Contact Email: benbwarner@gmail.com</em>
   <p>
-    <a href="https://www.linkedin.com/in/benjamin-b-warner/">LinkedIn</a> <a href="#">Art Station</a> <a href="#">Other</a>
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="benjamin-b-warner" data-version="v1">
+      <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/benjamin-b-warner?trk=profile-badge">Benjamin Warner</a>
+    </div>
   </p>
   <hr>
 </main>
