--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ main {
   <a href="#about">About</a>
   <a href="#3Dworks">3D Works</a>
   <a href="#2Dworks">2D Works</a>
+  <a href="#games.html">Game Development</a>
+  <a href="#engineering.html">Engineering Works</a>
   <a href="#other">Other</a>
   <a href="#contact">Contact</a>
 </sidenav>
