--- a/engineering.html
+++ b/engineering.html
@@ -56,7 +56,7 @@ main {
   <p>Ben Warner's Engineering Portfolio</p>
 </header>
 <sidenav>
-  <a href="index.html">Main</a>
+  <a href="index">Main</a>
 </sidenav>
 <hr>
 <main id="summary">
