--- a/engineering.html
+++ b/engineering.html
@@ -69,7 +69,7 @@ main {
 <hr>
 <main id="contact">
   <hr>
-  <h2>Contact Email: <em>benbwarner@gmail.com</em> or <em>bbwarne@g.clemson.edu</em></h2>
+  <h2>Contact Email: <em>bbwarne@g.clemson.edu</em></h2>
   <p>
     <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="benjamin-b-warner" data-version="v1">
       <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/benjamin-b-warner?trk=profile-badge">Benjamin Warner</a>
