--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ main {
   <a href="#about">About</a>
   <a href="#3Dworks">3D Works</a>
   <a href="#2Dworks">2D Works</a>
-  <a href="games">Game Development</a>
+  <a href="#gamesList">Game Development</a>
   <a href="engineering">Engineering Works</a>
   <a href="#other">Other</a>
   <a href="#contact">Contact</a>
