--- a/gamesList.html
+++ b/gamesList.html
@@ -67,29 +67,9 @@ main {
 </main>
 <hr>
 <hr>
-<main id="summary">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Team-waveShooter</title>
-    <link rel="shortcut icon" href="phageShift/TemplateData/favicon.ico">
-    <link rel="stylesheet" href="phageShift/TemplateData/style.css">
-    <script src="phageShift/TemplateData/UnityProgress.js"></script>
-    <script src="phageShift/Build/UnityLoader.js"></script>
-    <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "phageShift/Build/build-web3.json", {onProgress: UnityProgress});
-    </script>
-  </head>
-  <body>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Team-waveShooter</div>
-      </div>
-    </div>
-  </body>
+<main id="phageshift">
+  <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"  src="phageShift/index.html" style="border:0px #000000 none;" name="PhageShift" scrolling="no" msallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px" marginwidth="320px" height="540px" width="960px">
+  </iframe>
 </main>
 <hr>
 <hr>
