adding more games 1

--- a/engineering.html
+++ b/engineering.html
@@ -61,20 +61,19 @@ main {
 <hr>
 <main id="summary">
   <hr>
-  <h2>Summary of Relevant Experiences</h2>
+  <h2>Summary of Relevant Experience:</h2>
   <p> </p>
   <hr>
 </main>
 <hr>
-<hr>
 <main id="contact">
   <hr>
-  <h2>Contact Email: <em>bbwarne@g.clemson.edu</em></h2>
-  <p>
-    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="benjamin-b-warner" data-version="v1">
-      <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/benjamin-b-warner?trk=profile-badge">Benjamin Warner</a>
-    </div>
-  </p>
+  <address>
+    Contact Email:
+    <em><a href="mailto:bbwarne@g.clemson.edu">bbwarne@g.clemson.edu</a></em><br>
+    LinkedIn:
+    <em><a href="https://www.linkedin.com/in/benjamin-b-warner">https://www.linkedin.com/in/benjamin-b-warner</a></em><br>
+  </address>
   <hr>
 </main>
 <hr>
