--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@ main {
 </style>
 </head>
 <body>
-  
 <header>
   <p>Ben Warner's Digital Art Nexus</p>
 </header>
@@ -59,15 +58,15 @@ main {
   <a href="#about">About</a>
   <a href="#3Dworks">3D Works</a>
   <a href="#2Dworks">2D Works</a>
-  <a href="gamesList">Game Development</a>
-  <a href="engineering">Engineering Works</a>
   <a href="#other">Other</a>
+  <a href="games">Game Development</a>
+  <a href="engineering">Engineering Works</a>
   <a href="#contact">Contact</a>
 </sidenav>
 <hr>
 <main id="about">
   <hr>
-  <h2>About Me</h2>
+  <h2>About Me:</h2>
   <p>I am a Mechanical Engineer with a Bachelors Degree from Clemson University trying to improve the world by focusing on sustainable practices in my personal and professional life. I enjoy the prospect of working with new technologies, such as VR and 3D printing, and getting a chance to improve them further. I am proficient in multiple computer programming languages such as C++ and Python. I also am very well versed in design software such as SolidWorks and similar CAD.</p>
   <p>In addition to my pursuits in the engineering field, I have begun honing my 3D design and programming skills through a Masters of Science in Digital Production Arts. In this program, I am able to optimize the use of my free time to develop my personal and professional interests in Digital Productions.</p>
   <p>I work very well in a team environment and thrive in a setting where finding creative and innovative solutions is a daily challenge.</p>
@@ -76,36 +75,35 @@ main {
 <hr>
 <main id="3Dworks">
   <hr>
-  <h2>3D Works</h2>
+  <h2>3D Works:</h2>
   <a href="/3Dworks/">Link to old website!</a>
   <hr>
 </main>
 <hr>
 <main id="2Dworks">
   <hr>
-  <h2>2D Works</h2>
+  <h2>2D Works:</h2>
   <p>Nothing here yet!</p>
   <hr>
 </main>
 <hr>
 <main id="other">
   <hr>
-  <h2>Other Works</h2>
+  <h2>Other Works:</h2>
   <p>Nothing here yet!</p>
   <hr>
 </main>
 <hr>
 <main id="contact">
   <hr>
-  <h2>Contact Email: <em>bbwarne@g.clemson.edu</em></h2>
-  <p>
-    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="benjamin-b-warner" data-version="v1">
-      <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/benjamin-b-warner?trk=profile-badge">Benjamin Warner</a>
-    </div>
-  </p>
+  <address>
+    Contact Email:
+    <em><a href="mailto:bbwarne@g.clemson.edu">bbwarne@g.clemson.edu</a></em><br>
+    LinkedIn:
+    <em><a href="https://www.linkedin.com/in/benjamin-b-warner">https://www.linkedin.com/in/benjamin-b-warner</a></em><br>
+  </address>
   <hr>
 </main>
 <hr>
-  
 </body>
 </html>
