adding more games fix

--- a/games.html
+++ b/games.html
@@ -58,7 +58,7 @@ main {
 <sidenav>
   <a href="index">Main</a>
   <a href="phageshift">PhageShift</a>
-  <a href="mazegame">aMAZEingGame</a>
+  <a href="mazegame">aMAZEing</a>
   <a href="spidercrane">SpiderCrane</a>
 </sidenav>
 <hr>
@@ -82,7 +82,7 @@ main {
 <hr>
 <main id="mazegame">
   <hr>
-  <h2>aMAZEing Game:</h2>
+  <h2>aMAZEing:</h2>
   <p>
   I created this game with the goal of demonstrating basic controls and spawning objects in a maze-like experience.
   <br><br>
