--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ main {
     <br>
     <video src="dpa8070/finalProject-wereDog/wereDogVid.mp4" width="28%" controls preload></video>
     <video src="dpa8070/unicycleAnimation/render/unicycleVid1.mp4" width="30%" controls preload></video>
-    <image src="dpa8070/sceneReplication/images/referenceView.PNG" width="38%" controls preload></image>
+    <image src="dpa8070/sceneReplication/images/referenceView.png" width="38%" controls preload></image>
     <br><br>
-    <a href="dpa8070/finalProject-wereDog">See all ZBrush shots...</a>
+    <a href="/zbrush/">See all ZBrush shots...</a>
     <br>
     <image src="images/zBrush/Warner_Ben_P6-04.jpg" width="32%" controls preload></image>
     <image src="images/zBrush/Warner_Ben_P6-03.jpg" width="32%" controls preload></image>
