--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ header {
   width: 100%;
   position: fixed;
   top: 0; left: 0;
-  background-color: #777;
+  background-color: #333;
   text-align: center;
   font-size: 2vw;
   color: white;
@@ -44,7 +44,7 @@ main {
   margin-left: 15vw; /* Same as the width of the sidenav */
   font-size: 1.5vw; /* Increased text to enable scrolling */
   padding: 3vw 2vw;
-  background-color: #555;
+  background-color: #777;
   color: white;
 }
 
@@ -84,7 +84,7 @@ main {
     <video src="dpa8070/unicycleAnimation/render/unicycleVid1.mp4" width="30%" controls preload></video>
     <image src="dpa8070/sceneReplication/images/referenceView.png" width="38%" controls preload></image>
     <br><br>
-    <a href="/zbrush/">See all ZBrush shots...</a>
+    <a href="/zbrush/">See all ZBrush views...</a>
     <br>
     <image src="images/zBrush/Warner_Ben_P6-04.jpg" width="32%" controls preload></image>
     <image src="images/zBrush/Warner_Ben_P6-03.jpg" width="32%" controls preload></image>
