--- a/games.html
+++ b/games.html
@@ -57,9 +57,9 @@ main {
 </header>
 <sidenav>
   <a href="index">Main</a>
-  <a href="phageshift">PhageShift</a>
-  <a href="mazegame">aMAZEing</a>
-  <a href="spidercrane">SpiderCrane</a>
+  <a href="#phageshift">PhageShift</a>
+  <a href="#mazegame">aMAZEing</a>
+  <a href="#spidercrane">SpiderCrane</a>
 </sidenav>
 <hr>
 <main id="summary">
