--- a/engineering.html
+++ b/engineering.html
@@ -56,10 +56,10 @@ main {
   <p>Ben Warner's Engineering Portfolio</p>
 </header>
 <sidenav>
-  <a href="index">Main</a>
-  <a href="#retrofits">Main</a>
-  <a href="#fixtures">Main</a>
-  <a href="#personal">Main</a>
+  <a href="index">Back to Main</a>
+  <a href="#retrofits">Retrofits</a>
+  <a href="#fixtures">Fixtures</a>
+  <a href="#personal">Personal Projects</a>
 </sidenav>
 <hr>
 <main id="summary">
